Update files from Figma Make